# microshop

./: alembic.ini  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06270e0c21ef_create_users_table.py  620f8377c12e_create_posts_table.py  681aea1ef399_create_table.py  f6601f49b6ae_create_profile_table.py  f779492e71d9_create_posts_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py
